--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>JavaScript Projects</title>
 </head>
 <body>
-    <a href="JS/Projects/BGC-Changer/index.html">Background Color Changer</a>
+    <h1>JavaScript Projects</h1>
+    <ul>
+        <li><a href="JS/Projects/BGC-Changer/index.html">Background Color Changer</a></li>
+        <li></li>
+    </ul>
 </body>
 </html>
