New project Added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>JavaScript Projects</h1>
     <ul>
         <li><a href="JS/Projects/BGC-Changer/index.html">Background Color Changer</a></li>
-        <li></li>
+        <li><a href="JS/Projects/BMI-Calculator/index.html">BMI-Calculator</a></li>
     </ul>
 </body>
 </html>
