--- a/JS/Projects/BMI-Calculator/index.html
+++ b/JS/Projects/BMI-Calculator/index.html
@@ -11,8 +11,8 @@
     <div class="container">
       <h1>BMI Calculator</h1> 
       <form>
-        <p><label>Height in CM: </label><input type="text" id="height" /></p>
-        <p><label>Weight in KG: </label><input type="text" id="weight" /></p>
+        <p><label>Height in CM: </label><input type="text" id="height" required/></p>
+        <p><label>Weight in KG: </label><input type="text" id="weight" required/></p>
         <button>Calculate</button>
         <div id="results"></div>
         <div id="weight-guide">
