Background Color Changer

--- a/JS/Projects/BGC-Changer/index.html
+++ b/JS/Projects/BGC-Changer/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="canvas">
-      <h1>Color Scheme Switcher: Made by Mohammad Ali</h1>
+      <h1>Color Scheme Switcher: by Mohammad Ali</h1>
       <span class="button" id="grey"></span>
       <span class="button" id="white"></span>
       <span class="button" id="blue"></span>
