--- a/JS/Projects/BMI-Calculator/index.html
+++ b/JS/Projects/BMI-Calculator/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>BMI Calculator: Made by Mohammad Ali</h1> 
+      <h1>BMI Calculator: by Mohammad Ali</h1> 
       <form>
         <p><label>Height in CM: </label><input type="text" id="height" required/></p>
         <p><label>Weight in KG: </label><input type="text" id="weight" required/></p>
