--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="JS/Projects/BGC-Changer/index.html">Background Color Changer</a></li>
         <li><a href="JS/Projects/BMI-Calculator/index.html">BMI-Calculator</a></li>
+        <li><a href="JS/Projects/Digital_Clock/index.html">Digital Clock</a></li>
     </ul>
 </body>
 </html>
